# qcloud-sdk-android

./: CHANGELOG.md  README.md  publish.gradle  publishMavenCentral.gradle
Demo/: Example.t  (+3 more)
QCloudFoundation/quic/: .gitignore  CMakeLists.txt  build.gradle  changeLog.md  proguard-rules.pro  quic-1.5.419.aar
QCloudFoundation/quic/src/androidTest/: AndroidManifest.xml
QCloudFoundation/quic/src/androidTest/java/com/tencent/qcloud/quic/: ExampleInstrumentedTest.java  QuicClientTest.java  QuicImplTest.java  QuicTest.java
QCloudFoundation/quic/src/androidTest/java/com/tencent/qcloud/quic/test/: CallByNative.java  ConnectPool.java  ProgressCallback.java  QLog.java  QuicException.java  QuicImpl.java  QuicManager.java  QuicNative.java  QuicOutputStream.java  QuicRequest.java  QuicResponse.java  ResultCallback.java  TQuicTest.java
QCloudFoundation/quic/src/main/: AndroidManifest.xml
QCloudFoundation/quic/src/main/cpp/: COSQuic.cpp  COSQuic.h  cos_common.h  main.cpp  tnet_quic_request.h
QCloudFoundation/quic/src/main/java/com/tencent/qcloud/quic/: CallByNative.java  ConnectPool.java  ProgressCallback.java  QLog.java  QuicClientImpl.java  QuicConfig.java  QuicException.java  QuicImpl.java  QuicManager.java  QuicNative.java  QuicOutputStream.java  QuicProxy.java  QuicRequest.java  QuicResponse.java  TQuicState.java
QCloudFoundation/quic/src/main/java/com/tencent/tquic/impl/: TnetConfig.java  TnetQuicRequest.java  TnetStats.java
QCloudFoundation/quic/src/main/res/values/: strings.xml
QCloudFoundation/quic/src/test/java/com/tencent/qcloud/quic/: ExampleUnitTest.java
(+2053 files in other folders)
